# polite-submit

./: .gitignore  README.md  polite_submit.yaml.example  pyproject.toml
docs/: linkedin-article.md
polite_submit/: __init__.py  backoff.py  cli.py  config.py  decider.py  prober.py
tests/: __init__.py  test_backoff.py  test_cli.py  test_config.py  test_decider.py  test_prober.py
